--- a/Lessons/10Lab_Data_Scraping.Rmd
+++ b/Lessons/10Lab_Data_Scraping.Rmd
@@ -99,7 +99,24 @@ ggplot(gage_data,aes(x=datetime,y=discharge_cfs)) +
 > Alter the above code so that it plots the last *24* days of flow for gage *02085070*
 
 ```{r EXERCISE - pull.and.plot.other.discharge.data}
+#Set the URL
+theURL <- 'https://waterdata.usgs.gov/nwis/uv?search_site_no=02085070&period=24&format=rdb'
 
+#Get the data, which starts on line 31
+gage_data <- read.table(theURL,skip = 30,header=TRUE,sep='\t',stringsAsFactors = T) 
+
+#Update the column headers
+colnames(gage_data) = c("agency_cd", "site_no", "datetime", "tz_cd",
+                        "discharge_cfs", "89192_00060_cd", "gage_ht_ft", "89193_00065_cd")
+#Tidy the data
+gage_data <- gage_data %>% 
+  select(datetime, discharge_cfs,gage_ht_ft) %>% 
+  mutate(datetime = ymd_hm(datetime))
+
+#Plot
+ggplot(gage_data,aes(x=datetime,y=discharge_cfs)) + 
+  geom_line() +
+  labs(x = "Date",y = "Discharge (cfs)")
 ```
 
 
@@ -201,16 +218,32 @@ The RVest scraping workflow is as follows:
 
 ```{r EXERCISE - scrape.data.manually eval=FALSE}
 #1 Link to the web site using read_html
-the_website <- 
+the_website <- read_html('https://www.eia.gov/electricity/state/')
 
 #2&3 Locate elements and read their text attributes into variables
-the_states <- 
-the_price <- 
-the_capacity <- 
-net_generation <- 
-total_retail <- 
+ 
+the_states <- "td:nth-child(1)"
+the_price <- "td:nth-child(2)"
+the_capacity <- "td:nth-child(3)"
+net_generation <- "td:nth-child(4)"
+total_retail <- "td:nth-child(5)"
+
+#Scrape the data items
+the_states_data <- the_website %>% html_nodes(the_states) %>% html_text()
+the_price_data <- the_website %>%   html_nodes(the_price) %>%  html_text()
+the_capacity_data <- the_website %>% html_nodes(the_capacity) %>% html_text()
+net_generation_data <- the_website %>% html_nodes(net_generation) %>% html_text()
+total_retail_data <- the_website %>% html_nodes(total_retail) %>% html_text()
   
 #3 Construct a dataframe from the values
+df <- data.frame(
+  'state' = the_states_data,
+  'price' = as.numeric(the_price_data),
+  'Capacity' = as.numeric(gsub(',','',the_capacity_data)),
+  'net generation' = as.numeric(gsub(',','',net_generation_data)),
+  'total retail' = as.numeric(gsub(',','',total_retail_data))
+)
+
 
 ```
 
